merge_dwarvengame_xxiii written guides updates

--- a/eventTabs/merge_dwarvengame_xxiii_/board.html
+++ b/eventTabs/merge_dwarvengame_xxiii_/board.html
@@ -6,7 +6,7 @@
      <img id="event_banner" src="https://i.ibb.co/F33YbJG/EL-akcia-m-j-2022-banner.png" alt="undefined" class="center " style="margin-bottom: 15px; width: 50%;">
     -->
      <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Board ::..<br></h5>
-     <img id="event_banner" src="https://i.ibb.co/k2CQtPK/EL-akcia-august-2022-board-small.png" alt="undefined" class="center " style="margin-bottom: 15px;">
+     <img id="event_banner" src="https://i.ibb.co/sWWNb1s/board-small.png" alt="undefined" class="center " style="margin-bottom: 15px;">
 
      <div style="margin-left: 3%; margin-right: 3%; margin-bottom: 25px;">
 
@@ -14,7 +14,7 @@
         These are known as trade offers and you can see the offers in the right part of the event window. There are 12 trade offers
         in total of which 3 can be visible at the same time (that's a similar principle to our previous events with rotating chests).<br><br>
 
-        <center><img src="https://i.ibb.co/Jqdbw0f/EL-akcia-august-2022-okno-akcie.png" style="width: 60%;"></center><br>
+        <center><img src="https://i.ibb.co/db5bxhg/board-event-window.png" style="width: 60%;"></center><br>
 
         Your task begins with the event questline, where you can earn Dwarven Chips <img src="https://i.ibb.co/4tYSS6K/EL-akcia-august-2022-event-currency-1.png" style="height: 15px; margin-bottom: 3px;">.
         You need Dwarven Chips to spawn Pieces on your board, combine them and fulfill various trade offers that the Dwarven Event gives you.<br><br>
@@ -29,13 +29,13 @@
         set of Pieces, so make sure that you hover over a respective cup before you perform the spawning process to see where you can get the required
         items.<br><br>
 
-        <center><img src="https://i.ibb.co/znCWhn7/EL-akcia-august-2022-offer-required-pieces.png"></center><br>
+        <center><img src="https://i.ibb.co/r2jPwSQ/board-offer-required-pieces.png"></center><br>
 
         To find your required pieces, let's take a closer look at different trade offers in the right part of the event window.
 
         <div class="row" style="margin-top: 40px; margin-bottom: 40px;">
             <div class="col-sm-4">
-                <center><img src="https://i.ibb.co/zGqZM7B/EL-akcia-august-2022-offers.png"></center>
+                <center><img src="https://i.ibb.co/Jv1vcgq/board-offers.png"></center>
             </div>
             <div class="col-sm-8">
                 Three trade offers can be seen at the same time. You can always <b>Decline</b> any offer you wish (by clicking the Trashcan button),
@@ -56,7 +56,7 @@
         piece and in order to obtain the high-level piece, you need to combine 2 identical pieces. This is where merging part of this event begins
         and it's all situated in your event board:<br><br>
 
-        <center><img src="https://i.ibb.co/FxLhz1G/EL-akcia-august-2022-board-items.png" style="width: 35%;"></center><br>
+        <center><img src="https://i.ibb.co/QDSBnGJ/board-board.png" style="width: 35%;"></center><br>
 
         Take a look at the <b>Pieces</b> and <b>Trades</b> tabs to see more closely how the merging process works.<br><br>
         
@@ -65,7 +65,7 @@
         a chaos on your board. The constant need to tidy up your space and to actually bring some order out of this chaos is in my opinion one of
         the best aspects of this event.<br><br>
 
-        <center><img src="https://i.ibb.co/Q8YRJ1b/EL-akcia-august-2022-board.png" style="max-width: 100%;"></center><br>
+        <center><img src="https://i.ibb.co/LnRtS94/board-board-banner.png" style="max-width: 100%;"></center><br>
 
         <ul>
           <li><b>Group your pieces!</b> When you run into a new task and perform the spawning process too many times, a lot of new pieces 
