--- a/eventTabs/merge_dwarvengame_xxiii_/cards.html
+++ b/eventTabs/merge_dwarvengame_xxiii_/cards.html
@@ -35,11 +35,11 @@
                   <td style="width: 20%; text-align: center;"><img src="https://i.ibb.co/CzmD860/EL-akcia-august-2022-card.png"></td>
                   <td style="width: 8%; text-align: center;">75 <img src="https://i.ibb.co/4tYSS6K/EL-akcia-august-2022-event-currency-1.png"></td>
                   <td style="width: 8%; text-align: center;">100 <img src="https://i.ibb.co/4tYSS6K/EL-akcia-august-2022-event-currency-1.png"></td>
-                  <td style="width: 8%; text-align: center;">1 <img src="https://i.ibb.co/gJTSHfM/EL-akcia-august-2022-a6.png"></td>
-                  <td style="width: 8%; text-align: center;">1 <img src="https://i.ibb.co/x81jcHT/EL-akcia-august-2022-b6.png"></td>
+                  <td style="width: 8%; text-align: center;">1 <img src="https://i.ibb.co/zPfwZ8X/a6.png"></td>
+                  <td style="width: 8%; text-align: center;">1 <img src="https://i.ibb.co/0ctvnVd/b6.png"></td>
                   <td style="width: 8%; text-align: center;">1 <img src="https://i.ibb.co/fSC8zg6/EL-akcia-august-2022-c6.png"></td>
-                  <td style="width: 8%; text-align: center;">1 <img src="https://i.ibb.co/2vPJPGh/EL-akcia-august-2022-a5.png"></td>
-                  <td style="width: 8%; text-align: center;">1 <img src="https://i.ibb.co/BnXzJb8/EL-akcia-august-2022-b5.png"></td>
+                  <td style="width: 8%; text-align: center;">1 <img src="https://i.ibb.co/KNHvSk2/a5.png"></td>
+                  <td style="width: 8%; text-align: center;">1 <img src="https://i.ibb.co/bJcdDXx/b5.png"></td>
                   <td style="width: 8%; text-align: center;">1 <img src="https://i.ibb.co/N37j113/EL-akcia-august-2022-c5.png"></td>
                   <td style="width: 8%; text-align: center;">50 <img src="https://i.ibb.co/4tYSS6K/EL-akcia-august-2022-event-currency-1.png"></td>
                 </tr>
