--- a/guestRaces/guestRacesTabs/ch21/layouts.html
+++ b/guestRaces/guestRacesTabs/ch21/layouts.html
@@ -15,7 +15,7 @@
         <li>The minimal required number of Vallorian Workshops and Workshops of Diabhal's Horde is 9 from each (based on the questline). Here are some well-shaped suggestions for the settlement with all production buildings at level 4:<br><br>
         <center><img src="https://i.ibb.co/J23sh8f/layout1.png" style="width: 70%;"></center><br>
         <center><img src="https://i.ibb.co/hRMxYyV/layout3.png" style="width: 65%;"></center><br>
-        <center><img src="https://i.ibb.co/4YjSDDh/layout4.png" style="width: 50%;"></center><br></li>
+        <center><img src="https://i.ibb.co/TBNsNr4/layout4.png" style="width: 50%;"></center><br></li>
 
         <li>This is an alternative layout with the same amount of buildings, but a different shape (you may consider this based on your current city space):<br><br>
         <center><img src="https://i.ibb.co/pwB6gXR/layout2.png" style="width: 80%;"></center><br></li>
