--- a/eventTabs/merge_dwarvengame_xxiii_/pieces.html
+++ b/eventTabs/merge_dwarvengame_xxiii_/pieces.html
@@ -6,7 +6,7 @@
      <img id="event_banner" src="https://i.ibb.co/F33YbJG/EL-akcia-m-j-2022-banner.png" alt="undefined" class="center " style="margin-bottom: 15px; width: 50%;">
     -->
      <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Pieces ::..<br></h5>
-     <img id="event_banner" src="https://i.ibb.co/3N8Kx0v/EL-akcia-august-2022-pieces.png" alt="undefined" class="center " style="margin-bottom: 15px;">
+     <img id="event_banner" src="https://i.ibb.co/M8fbxh0/pieces-pieces.png" alt="undefined" class="center " style="margin-bottom: 15px;">
 
      <div style="margin-left: 3%; margin-right: 3%; margin-bottom: 25px;">
     
@@ -28,21 +28,21 @@
             </tr>
             <tr>
               <td style="width: 40%; text-align: center;">Dwarven Figurines</td>
-              <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/zmg9JHX/EL-akcia-august-2022-a1.png"></td>
-              <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/ZcMgfDM/EL-akcia-august-2022-a2.png"></td>
-              <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/2kySgfX/EL-akcia-august-2022-a3.png"></td>
-              <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/93wJKpf/EL-akcia-august-2022-a4.png"></td>
-              <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/2vPJPGh/EL-akcia-august-2022-a5.png"></td>
-              <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/gJTSHfM/EL-akcia-august-2022-a6.png"></td>
+              <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/WP4Jq64/a1.png"></td>
+              <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/PxMvyTv/a2.png"></td>
+              <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/yXKyRPm/a3.png"></td>
+              <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/5vGFxky/a4.png"></td>
+              <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/KNHvSk2/a5.png"></td>
+              <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/zPfwZ8X/a6.png"></td>
             </tr>
             <tr>
               <td style="width: 40%; text-align: center;">Dwarven Tools</td>
-              <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/WcBRqQq/EL-akcia-august-2022-b1.png"></td>
-              <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/gjv64tP/EL-akcia-august-2022-b2.png"></td>
-              <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/ryyNqQK/EL-akcia-august-2022-b3.png"></td>
-              <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/5kLGJsC/EL-akcia-august-2022-b4.png"></td>
-              <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/BnXzJb8/EL-akcia-august-2022-b5.png"></td>
-              <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/x81jcHT/EL-akcia-august-2022-b6.png"></td>
+              <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/RDfZ7wW/b1.png"></td>
+              <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/Sxgs1Jf/b2.png"></td>
+              <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/X34GjvY/b3.png"></td>
+              <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/hRQGGkR/b4.png"></td>
+              <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/bJcdDXx/b5.png"></td>
+              <td style="width: 10%; text-align: center;"><img src="https://i.ibb.co/0ctvnVd/b6.png"></td>
             </tr>
             <tr>
               <td style="width: 40%; text-align: center;">Dices</td>
