--- a/guestRaces/guestRacesTabs/ch21/settlement.html
+++ b/guestRaces/guestRacesTabs/ch21/settlement.html
@@ -459,6 +459,19 @@
             you make regular use of your Merchants and consider engaging in cross-tier trades during the night. This strategy will yield more Basic Ascended goods 
             when offering Precious Ascended goods and you won't suffer from extended acceptance times (as these offers are generally in lower demand among other players).
         </li>
+        <li>
+            The ability to log in regularly is valued highly in this chapter. Not only will you save space and resources by not building additional Workshops of Diabhal's Horde
+            (as stated above), but you will also be able to use Merchants more often to receive Ascended Goods. They will be consumed greatly in the late phases of the chapter (once
+            your Vallorian Workshops are upgraded to level 4) and the regular use of Merchants will allow you to make a smooth progress in the chapter.
+        </li>
+        <li>
+            Mana requirements get sky-high in the late phases of the chapter. The total requirements reach great above 100.000.000, while "only" 32.000.000 of it is consumed by unlocking technologies.
+            Most of your mana will be required when producing Rude Oblations inside the Vallorian Dragon Tower. I highly recommend you to prepare some mana in advance of this chapter.
+            Take a look inside the Sorceries tab of your inventory. It is possible that you've won the Tome of Frozen Goods in one of the previous events, that gives you the option to get the
+            Cryomana expiring building - it will freeze the decay of mana for 60 days. You may also find the Mana Rune building inside the Buildings tab in your inventory. 
+            It will increase the production of all your mana producing buildings by 70% for 15 days.<br>
+            Take a look at the All Events page to see what else the current event has in store for you.
+        </li>
     </ul>
         
     </div>
