layouts for older chapters

--- a/guestRaces/guestRacesTabs/ch19/layouts.html
+++ b/guestRaces/guestRacesTabs/ch19/layouts.html
@@ -1,2 +1,29 @@
-<!--https://cz.forum.elvenar.com/index.php?threads/pomsta-vyhnanc%C5%AF.7724/post-146447
-https://cz.forum.elvenar.com/index.php?threads/pomsta-vyhnanc%C5%AF.7724/post-145559-->
+<!-- HTML -->
+
+<div id="main">
+
+    <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Revenge of the Exile ::..<br></h5>
+    <img id="event_banner" src="https://i.ibb.co/NTmBDJ6/ch19-banner.png" alt="undefined" class="center " style="width: 50%; margin-bottom: 15px;">
+
+    <div style="margin-left: 3%; margin-right: 3%;">
+
+    <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Layouts ::..<br></h5>
+
+    <img id="event_banner" src="https://i.ibb.co/z8pjTPh/layouts.png" alt="undefined" class="center " style="margin-bottom: 20px;">
+        
+    <ul>
+        <li>Each of the following layouts has a slightly different number of Breeding Facilities, so that you can decide for yourself, how many of them you want (or can afford to) place into your city and how fast do you want
+            to progress through the chapter.<br><br>
+        <center><img src="https://i.ibb.co/Bjp8SVW/layout1.png" style="width: 70%;"></center><br>
+        <center><img src="https://i.ibb.co/St5WZgT/layout3.png" style="width: 65%;"></center><br></li>
+
+        <li>This layout leaves some space for Towers of Light and Towers of Darkness as well, so that you can swap them around the Fortress of Revenge while you produce inside Breeding Facilities.<br><br>
+        <center><img src="https://i.ibb.co/300SVSk/layout2.png" style="width: 70%;"></center><br></li>
+
+        <li>I attach two additional layouts for Towers of Light and Towers of Darkness. If you want to maximize the production of White and Dark magic from these buildings, here is how you can arrange the buildings:<br><br>
+        <center><img src="https://i.ibb.co/GHwLqFG/layout4.png" style="width: 70%;"></center><br></li>
+    </ul>
+    
+    </div>
+
+</div>
