gr layouts update

--- a/guestRaces/guestRacesTabs/ch10/layouts.html
+++ b/guestRaces/guestRacesTabs/ch10/layouts.html
@@ -29,6 +29,8 @@
         <center><img src="https://i.ibb.co/RygBZvZ/layout8.png" style="width: 45%;"></center><br></li>
     </ul>
     
+    <center><h7>The layouts have been created using the <a href="https://www.elvenarchitect.com/city/planner/" class="text-link font-weight-bold" target="_blank">Elvenarchitect</a> tool.</h7></center>
+    
     </div>
 
 </div>
