--- a/guestRaces/guestRacesTabs/ch11/layouts.html
+++ b/guestRaces/guestRacesTabs/ch11/layouts.html
@@ -15,21 +15,23 @@
         <li>Here are some layout suggestions that would work to fit the recommended number of buildings. This layout uses about 18 expansion grid areas:<br><br>
         <center><img src="https://i.ibb.co/WzVcz5T/layout1.png" style="width: 60%;"></center><br></li>
 
-        <li>A similar design below uses more farms, but doesn't allow enough space for sufficient fields. We know from the quests we're going to need space for at least 6 farms and 15 fields.<br><br>
+        <li>A design similar to the one below incorporates more farms, but it doesn't provide ample space for the required number of fields. It's essential to allocate space for a minimum of 6 farms and 15 fields, as indicated by the quests.<br><br>
         <center><img src="https://i.ibb.co/bg28ybf/layout2.png" style="width: 55%;"></center><br></li>
 
-        <li>Slightly more efficient, and uses slightly less space compared to the first option, and may or may not be more or less practical depending on existing city layout and space. Uses 18 total land expansion areas.<br><br>
+        <li>This layout offers a slightly higher level of efficiency and occupies slightly less space in comparison to the initial option. However, its practicality may vary depending on the existing city layout and available space. It requires a total of 18 land expansion areas.<br><br>
         <center><img src="https://i.ibb.co/Dzp1rnx/layout3.png" style="width: 60%;"></center><br></li>
 
-        <li>By placing the Spring Grove in the middle vs. on an end of the settlement, this allows the same number of farms and fields to fit neatly inside a 5x3 grid expansion sized area. A vertical option is about as nice 
-            as the horizontal option of nearly the same layout. Uses up to 18 total expansion areas.<br><br>
+        <li>When positioning the Spring Grove in the center rather than at the end of the settlement, it enables the same number of farms and fields to fit neatly within a 5x3 grid expansion area. 
+            Both the vertical and horizontal options offer similar layout aesthetics. This layout utilizes up to 18 total expansion areas.<br><br>
         <center><img src="https://i.ibb.co/QMzc3Sq/layout4.png" style="width: 30%;"></center><br></li>
 
-        <li>Here are the layouts that might work better if you have more space wide than long - with 4 expansion areas wide, and 5 long, you can still fit more than the recommended number of fields or farms. The first one has more Farms, the
-            second one has more Fields:<br><br>
+        <li>Here are two layout options that might be more suitable if you have more width than length in your available space. With a configuration of 4 expansion areas wide and 5 long, 
+            you can still accommodate more than the recommended number of fields or farms. The first layout prioritizes farms, while the second one focuses on fields.<br><br>
         <center><img src="https://i.ibb.co/whmHB2v/layout5.png" style="width: 50%;"></center><br>
-        <center><img src="https://i.ibb.co/FDFLBVc/layout6.png" style="width: 50%;"></center><br></li>
+        <center><img src="https://i.ibb.co/FDFLBVc/layout6.png" style="width: 50%;"></center></li>
     </ul>
+    
+    <center><h7>The layouts have been created using the <a href="https://www.elvenarchitect.com/city/planner/" class="text-link font-weight-bold" target="_blank">Elvenarchitect</a> tool.</h7></center>
     
     </div>
 
