--- a/guestRaces/guestRacesTabs/ch14/layouts.html
+++ b/guestRaces/guestRacesTabs/ch14/layouts.html
@@ -22,8 +22,10 @@
         <center><img src="https://i.ibb.co/vs2Zhz7/layout5.png" style="width: 65%;"></center><br>
         <center><img src="https://i.ibb.co/cYJBJyK/layout6.png" style="width: 60%;"></center><br>
         <center><img src="https://i.ibb.co/NtCrq5d/layout7.png" style="width: 40%;"></center><br>
-        <center><img src="https://i.ibb.co/xCzNbHx/layout8.png" style="width: 45%;"></center><br></li>
+        <center><img src="https://i.ibb.co/xCzNbHx/layout8.png" style="width: 45%;"></center></li>
     </ul>
+    
+    <center><h7>The layouts have been created using the <a href="https://www.elvenarchitect.com/city/planner/" class="text-link font-weight-bold" target="_blank">Elvenarchitect</a> tool.</h7></center>
     
     </div>
 
