--- a/guestRaces/guestRacesTabs/ch15/layouts.html
+++ b/guestRaces/guestRacesTabs/ch15/layouts.html
@@ -12,31 +12,33 @@
     <img id="event_banner" src="https://i.ibb.co/z8pjTPh/layouts.png" alt="undefined" class="center " style="margin-bottom: 20px;">
         
     <ul>
-        <li>When starting, it will be important to build and upgrade as many Academies as possible in order to produce the Ideas and Workforce needed to unlock the next three production buildings.
-            A maximum of 8 can fit around the Council Hall.<br><br>
+        <li>In the initial stages, prioritizing the construction and upgrades of Academies will be crucial to generate the necessary Ideas and Workforce 
+            for unlocking the three production structures. It's worth noting that the Council Hall can accommodate a maximum of 8 Academies.<br><br>
         <center><img src="https://i.ibb.co/d6YTzcD/layout1.png" style="width: 40%;"></center><br></li>
 
-        <li>In order to satisfy the chapter quests, you only need one set of buildings. Smallest possible - Fits in just over 2x5; minimum Academies:<br><br>
+        <li>To fulfill the chapter quests, a single set of buildings is all that's required. Here is an example of the smallest possible layout - fits in just over 2x5 expansions and contains minimum Academies:<br><br>
         <center><img src="https://i.ibb.co/f8k9TJv/layout2.png" style="width: 30%;"></center><br></li>
 
-        <li>Fits in less than 3x5; fewer Academies:<br><br>
+        <li>The following layout fits less than 3x5 expansions and contains a few Academies:<br><br>
         <center><img src="https://i.ibb.co/370965j/layout3.png" style="width: 35%;"></center><br></li>
 
-        <li>Fits in less than 4x6; maximum Academies (8):<br><br>
+        <li>Fits in less than 4x6 expansions and contains maximum Academies (8):<br><br>
         <center><img src="https://i.ibb.co/RyRn8Yh/layout4.png" style="width: 35%;"></center><br></li>
 
-        <li>Two sets can be fit in less than the typical settlement size. Long layout; just over 3x8; maximum Academies (8):<br><br>
+        <li>It's possible to accommodate two sets within a space smaller than the standard settlement size. Long layout, just over 3x8 expansions with maximum Academies (8):<br><br>
         <center><img src="https://i.ibb.co/SRyDCNT/layout5.png" style="width: 35%;"></center><br></li>
 
-        <li>Square layout - 4x5; fewer Academies:<br><br>
+        <li>Square layout - 4x5 expansions, containing fewer Academies:<br><br>
         <center><img src="https://i.ibb.co/NYsh6RG/layout6.png" style="width: 40%;"></center><br></li>
 
-        <li>Square layout - 4x6; near maximum Academies (7):<br><br>
+        <li>Square layout - 4x6 expansions, containing near maximum Academies (7):<br><br>
         <center><img src="https://i.ibb.co/6Xgzsc0/layout7.png" style="width: 40%;"></center><br></li>
 
-        <li>Three sets can fit in less than 5x6; takes 20-22% of a well expanded city:<br><br>
-        <center><img src="https://i.ibb.co/ScZwFDq/layout8.png" style="width: 45%;"></center><br></li>
+        <li>You can place three sets within an area smaller than 5x6.<br><br>
+        <center><img src="https://i.ibb.co/ScZwFDq/layout8.png" style="width: 45%;"></center></li>
     </ul>
+
+    <center><h7>The layouts have been created using the <a href="https://www.elvenarchitect.com/city/planner/" class="text-link font-weight-bold" target="_blank">Elvenarchitect</a> tool.</h7></center>
     
     </div>
 
