--- a/guestRaces/guestRacesTabs/ch17/layouts.html
+++ b/guestRaces/guestRacesTabs/ch17/layouts.html
@@ -26,8 +26,10 @@
         <li>Back when I was going through this chapter, I gave it second name - Demolishers from Unur. This is one of the few chapters that - except for the space - cost you almost nothing when you keep increasing the size of your settlement. So,
             you can just teleport some buildings to your inventory and add additional small ships. I remember half of my city being covered with ships only - but it did its job. :)<br><br>
         </li>
-        <center><img src="https://i.ibb.co/PY6myGR/layout5.png" style="width: 50%;"></center><br></li>
+        <center><img src="https://i.ibb.co/PY6myGR/layout5.png" style="width: 50%;"></center></li>
     </ul>
+    
+    <center><h7>The layouts have been created using the <a href="https://www.elvenarchitect.com/city/planner/" class="text-link font-weight-bold" target="_blank">Elvenarchitect</a> tool.</h7></center>
     
     </div>
 
