--- a/guestRaces/guestRacesTabs/ch18/layouts.html
+++ b/guestRaces/guestRacesTabs/ch18/layouts.html
@@ -17,8 +17,10 @@
         <center><img src="https://i.ibb.co/NN3cz6y/layout2.png" style="width: 50%;"></center><br></li>
 
         <li>If you do not aim to build the Welcome Squares, you can go with the following layout:<br><br>
-        <center><img src="https://i.ibb.co/31hvx3Z/layout3.png" style="width: 40%;"></center><br></li>
+        <center><img src="https://i.ibb.co/31hvx3Z/layout3.png" style="width: 40%;"></center></li>
     </ul>
+    
+    <center><h7>The layouts have been created using the <a href="https://www.elvenarchitect.com/city/planner/" class="text-link font-weight-bold" target="_blank">Elvenarchitect</a> tool.</h7></center>
     
     </div>
 
