--- a/guestRaces/guestRacesTabs/ch21/layouts.html
+++ b/guestRaces/guestRacesTabs/ch21/layouts.html
@@ -23,6 +23,8 @@
         <li>Additional layouts will be added soon.<br><br></li>
     </ul>
     
+    <center><h7>The layouts have been created using the <a href="https://www.elvenarchitect.com/city/planner/" class="text-link font-weight-bold" target="_blank">Elvenarchitect</a> tool.</h7></center>
+    
     </div>
 
 </div>
