--- a/guestRaces/guestRacesTabs/ch16/layouts.html
+++ b/guestRaces/guestRacesTabs/ch16/layouts.html
@@ -12,13 +12,15 @@
     <img id="event_banner" src="https://i.ibb.co/z8pjTPh/layouts.png" alt="undefined" class="center " style="margin-bottom: 20px;">
         
     <ul>
-        <li>Feel free to choose the layout based on your current city space:<br><br>
+        <li>All of the layouts contain the same number of production buildings (the only difference is in numbers of Medication Circles). Feel free to choose the layout based on your current city space.<br><br>
         <center><img src="https://i.ibb.co/0qXF2MS/layout1.png" style="width: 60%;"></center><br>
         <center><img src="https://i.ibb.co/4pCrkzg/layout2.png" style="width: 60%;"></center><br>
         <center><img src="https://i.ibb.co/nfcW9b9/layout3.png" style="width: 35%;"></center><br>
-        <center><img src="https://i.ibb.co/S7FBQGH/layout4.png" style="width: 60%;"></center><br></li>
+        <center><img src="https://i.ibb.co/S7FBQGH/layout4.png" style="width: 60%;"></center></li>
     </ul>
     
+    <center><h7>The layouts have been created using the <a href="https://www.elvenarchitect.com/city/planner/" class="text-link font-weight-bold" target="_blank">Elvenarchitect</a> tool.</h7></center>
+
     </div>
 
 </div>
