--- a/guestRaces/guestRacesTabs/ch19/layouts.html
+++ b/guestRaces/guestRacesTabs/ch19/layouts.html
@@ -21,8 +21,10 @@
         <center><img src="https://i.ibb.co/300SVSk/layout2.png" style="width: 70%;"></center><br></li>
 
         <li>I attach two additional layouts for Towers of Light and Towers of Darkness. If you want to maximize the production of White and Dark magic from these buildings, here is how you can arrange the buildings:<br><br>
-        <center><img src="https://i.ibb.co/GHwLqFG/layout4.png" style="width: 70%;"></center><br></li>
+        <center><img src="https://i.ibb.co/GHwLqFG/layout4.png" style="width: 70%;"></center></li>
     </ul>
+    
+    <center><h7>The layouts have been created using the <a href="https://www.elvenarchitect.com/city/planner/" class="text-link font-weight-bold" target="_blank">Elvenarchitect</a> tool.</h7></center>
     
     </div>
 
