--- a/guestRaces/guestRacesTabs/ch8/layouts.html
+++ b/guestRaces/guestRacesTabs/ch8/layouts.html
@@ -19,7 +19,9 @@
         <center><img src="https://i.ibb.co/WHfXfn8/layout1.png" style="width: 50%;"></center><br></li>
 
         <li>Feel free to choose the layout based on your current city space. The third layout may greatly fit in the corner of your city, while the second one may fill the gap between lines of your city buildings.</li>
-    </ul><br>
+    </ul>
+    
+    <center><h7>The layouts have been created using the <a href="https://www.elvenarchitect.com/city/planner/" class="text-link font-weight-bold" target="_blank">Elvenarchitect</a> tool.</h7></center>
     
     </div>
 
