--- a/eventTabs/tile_mistyforest_xxiii_/tools.html
+++ b/eventTabs/tile_mistyforest_xxiii_/tools.html
@@ -7,7 +7,7 @@
 
     <div style="margin-left: 3%; margin-right: 3%; margin-bottom: 25px;">
        
-       The Mischievous Therapy event introduces a game mechanic that is completely unique in Elvenar! The Misty Forest has appeared
+       The Whispers of the Soul event introduces a game mechanic that is completely unique in Elvenar! The Misty Forest has appeared
        right next to your city and now it's up to you to clear the fog, find your path and collect all the hidden spirits
        and mysterious rewards that the Halloween event has to offer!<br>
 
@@ -47,9 +47,9 @@
              <center><img src="https://i.ibb.co/KVv7842/EL-akcia-okt-ber-2022-biggest-pack.png" style="max-width: 100%;"></center><br>
            </div>
            <div class="col-sm-7">
-               I recommend you to always purchase the biggest pack for 420 Magic Ingredients. You will receive the biggest number of tools
-               per 1 ingredient spent.<br><br> Keep in mind that if you stick to the <b>Strategies</b>, the ratio of tools you use should be always
-               approximately the same as the ratio of tools that is provided in this pack.
+            I recommend you to always purchase the packs of bundled tools (by turns). You will receive the biggest number of tools
+            per 1 ingredient spent.<br><br> Keep in mind that if you stick to the <b>Strategies</b>, the ratio of tools you use should be always
+            approximately the same as the ratio of tools that is provided by the purchase of this style.
            </div>
        </div>
 
