--- a/eventTabs/tile_mistyforest_xxiii_/playground.html
+++ b/eventTabs/tile_mistyforest_xxiii_/playground.html
@@ -84,7 +84,7 @@
       grid-area: bar;
       grid-column: 1;
       grid-row: 2;
-      background-color: #9E6F38;
+      background-color: #0f6a65;
       border-radius: 5px;
       overflow: hidden;
     }
@@ -102,7 +102,7 @@
       grid-area: stats;
       grid-column: 2;
       grid-row: 2;
-      background-color: #9E6F38;
+      background-color: #0f6a65;
       border-radius: 5px;
       color: white;
       text-shadow: 2px 2px #000000;
@@ -147,19 +147,19 @@
     #canvas {
       width: 100%;
       border: 29px solid black;
-      border-image: url("eventTabs/tile_mistyforest_xxiii_/tileEvent_assets/window/ui_panel_tiled_borders.png") 73 73 73 73 repeat;
+      border-image: url("eventTabs/tile_mistyforest_xxiii_/tileEvent_assets/window/ui_panel_tiled_borders.png") 87 99 80 95 repeat;
       box-shadow: inset 0px 0px 10px 7px rgba(0,0,0,0.5);
     }
   
     .tool {
       text-align: center;
-      padding-top: 10px;
+      padding-top: 1px;
     }
   
     .tool img {
       width: 60%;
       /*border: 10px inset rgb(114, 52, 11);*/
-      background-image: url("eventTabs/tile_mistyforest_xxiii_/tileEvent_assets/window/ui_panel_amuni_tools_inset.png");
+      /*background-image: url("eventTabs/tile_mistyforest_xxiii_/tileEvent_assets/window/ui_panel_amuni_tools_inset.png");*/
       background-size: 100% 100%;
     }
   
@@ -267,12 +267,12 @@
     <hr />
     <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left; margin-bottom: 25px;">..:: Instructions ::..<br></h5>
   
-    <p>This is a Playground for <strong>The Great Excavation</strong> event! This feature simulates the well-known event mechanic
-    we know from the Amuni event!</p>
+    <p>This is a Playground for <strong>Whispers of the Soul</strong> event! This feature simulates the well-known event mechanic
+    we know from the Halloween event!</p>
     
-    <p>You can interact with it &ndash; use provisions <img src="eventTabs/tile_mistyforest_xxiii_/tileEvent_assets/currency/event_currency.png" style="height: 18px;"> to purchase tools&nbsp;<img src="https://i.ibb.co/D70H5y5/EL-akcia-febru-r-2022-shovel.png" style="height: 18px; display: inline;">, use your tools to clear the
-    ancient city and uncover rewards <img src="https://i.ibb.co/W2RtBts/EL-akcia-febru-r-2022-payback.png" style="height: 18px;"> to help you progressing on the progress lane. Practising this minigame will help you to not only
-    better understand the way this event works, but will also help you better navigate between the ancient walls <img src="eventTabs/tile_mistyforest_xxiii_/tileEvent_assets/tiles/tileBlocker3.png" style="height: 20px"> and improve the efficiency
+    <p>You can interact with it &ndash; use magic ingredients <img src="eventTabs/tile_mistyforest_xxiii_/tileEvent_assets/currency/event_currency.png" style="height: 18px;"> to purchase tools&nbsp;<img src="https://i.ibb.co/D70H5y5/EL-akcia-febru-r-2022-shovel.png" style="height: 18px; display: inline;">, use your tools to clear the
+    fog and uncover rewards <img src="https://i.ibb.co/W2RtBts/EL-akcia-febru-r-2022-payback.png" style="height: 18px;"> to help you progressing on the progress lane. Practising this minigame will help you to not only
+    better understand the way this event works, but will also help you better navigate inside the misty forest <img src="eventTabs/tile_mistyforest_xxiii_/tileEvent_assets/tiles/tileBlocker3.png" style="height: 20px"> and improve the efficiency
     of using your tools.</p>
   
     <p>You can use the <img src="eventTabs/tile_mistyforest_xxiii_/tileEvent_assets/window/button_plus_normal.png" style="height: 18px;" caption="+"> button to purchase more tools. Use the same button to get back to the game. This toolshop
@@ -280,7 +280,7 @@
     work the best for you!</p>
   
     <p>You can use the <strong>Restart</strong> button to clear your current progress and start again. The game <strong>ends</strong> when all possible
-    provisions are used and no more tools can be placed. In case you broke your personal record, it will get displayed on the page.
+    magic ingredients are used and no more tools can be placed. In case you broke your personal record, it will get displayed on the page.
     This information is only visible to you and you can play again to try improve your strategies and beat your high score again.
     </p>
   
@@ -1393,10 +1393,10 @@
       this.shopElements = [];
       this.offerIds = ["set1", "set2", "shovel", "thinBottle", "thickBottle"];
       this.shopOffers = {
-        set1: {prize: 80, tool1: 5, tool2: 1, tool3: 1},
-        set2: {prize: 140, tool1: 1, tool2: 3, tool3: 3},
+        set1: {prize: 100, tool1: 8, tool2: 1, tool3: 1},
+        set2: {prize: 150, tool1: 1, tool2: 4, tool3: 3},
         shovel: {prize: 9, tool1: 1, tool2: 0, tool3: 0},
-        thinBottle: {prize: 21, tool1: 0, tool2: 1, tool3: 0},
+        thinBottle: {prize: 20, tool1: 0, tool2: 1, tool3: 0},
         thickBottle: {prize: 30, tool1: 0, tool2: 0, tool3: 1}
       };
       this.toolLabels = [];
