--- a/community-knowledge.html
+++ b/community-knowledge.html
@@ -161,10 +161,10 @@
             <div class="row">
                 <div class="col-sm">
                     <div class="row center" style="height: 33%; vertical-align: middle">
-                        <div class="col-sm">
-                            <center><h7><img src="https://media.innogamescdn.com/com_ONYX_EN/Forum/Fellowships/Fellowship_banner.png" style="max-width: 50%; margin-top: -10px;"><br>
+                        <div class="col-sm h7 text-center">
+                            <img src="https://media.innogamescdn.com/com_ONYX_EN/Forum/Fellowships/Fellowship_banner.png" class="center" style="max-width: 30%; margin-top: -10px;"><br>
                             Welcome to the <b>Community Knowledge</b> centre!<br>
-                            Co sa deje s forami, preco sa zatvaraju, aky obsah tato stranka ponuka, aky je proces zbierania informacii, preco je forum read-only... dolezita informacia o tom ze aktualne je prva faza tohto procesu - zber dat!!!</h7></center>
+                            Co sa deje s forami, preco sa zatvaraju, aky obsah tato stranka ponuka, aky je proces zbierania informacii, preco je forum read-only... dolezita informacia o tom ze aktualne je prva faza tohto procesu - zber dat!!!
                         </div>
                     </div>
                 </div>
