ck clickable header

--- a/community-knowledge.html
+++ b/community-knowledge.html
@@ -162,7 +162,8 @@
                 <div class="col-sm">
                     <div class="row center" style="height: 33%; vertical-align: middle">
                         <div class="col-sm h7 text-center">
-                            <img src="https://media.innogamescdn.com/com_ONYX_EN/Forum/Fellowships/Fellowship_banner.png" class="center" style="width: 75%; max-width: 600px; margin-top: -10px;"><br>
+                            <a href="community-knowledge.html">
+                            <img src="https://media.innogamescdn.com/com_ONYX_EN/Forum/Fellowships/Fellowship_banner.png" class="center" style="width: 75%; max-width: 600px; margin-top: -10px;"></a><br>
                             Welcome to the <b>Community Knowledge</b> centre!<br>
                             Co sa deje s forami, preco sa zatvaraju, aky obsah tato stranka ponuka, aky je proces zbierania informacii, preco je forum read-only... dolezita informacia o tom ze aktualne je prva faza tohto procesu - zber dat!!!
                         </div>
