ck visual ideas

--- a/community-knowledge.html
+++ b/community-knowledge.html
@@ -143,6 +143,7 @@
 </head>
 
 <body>
+<!-- style="background-image: url('https://cz.forum.elvenar.com/styles/game/mainbg.jpg'); background-size: cover; background-attachment: fixed;"-->
 
 <!-- EXCEPTION HANDLER -->
 
