--- a/community-knowledge.html
+++ b/community-knowledge.html
@@ -167,38 +167,45 @@
                             <img src="https://media.innogamescdn.com/com_ONYX_EN/Forum/Fellowships/Fellowship_banner.png" class="center" style="width: 75%; max-width: 600px;"></a><br>
                             Welcome to the <b>Community Knowledge</b> centre!<br><br>
                             <button type="button" class="btn btn-download" data-toggle="modal" data-target=".bd-example-modal-lg">What is this?</button>
-
+                            <p style="margin-top: 5px; margin-bottom: -10px;">Visit the form <a href="https://docs.google.com/forms/d/1ECxKwNiiGIFWHwFyANIk6BvSsPGOQ-f2WbrMjhPdDnI" style="font-weight: bold" target="_blank" class="text-link">HERE</a>!</p>
                             <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
                             <div class="modal-dialog modal-lg">
                                 <div class="modal-content" style="max-height: 950px; overflow-y: auto; padding: 20px; background: linear-gradient(to bottom, #f3eee3, #e4d3af); box-shadow: 0px -15px 15px 0px rgba(128, 128, 128, 0.4) inset;">
                                     <h5 id="header" class="card-title text-center text-brown font-weight-bold" style="text-align: left;">..:: Community Knowledge ::..<br></h5>
                                     <center><img src="https://media.innogamescdn.com/com_ONYX_EN/Forum/Fellowships/Fellowship_banner.png"></center><br>
+                                    <hr>
                                     The Community Knowledge is the latest feature on my website, related to the closure of the Community Forums announced on September 11th, 2023. InnoGames has decided to close the Community Forums later this year 
                                     and shift the focus to the newly created server on Discord. From now on, players can use the official Elvenar server on Discord to discuss the game. <!--Discord is a modern and convenient platform that can be easily accessed 
                                     from both your mobile device and desktop browser or app.--><br><br>
                                     The unfortunate news is that this change will make us lose a wealth of interesting information that has been created over the years - once the Community Forums are closed and no longer accessible. That's why I'm introducing 
-                                    to you the Community Knowledge - an archive of all the information from the forums that is either important, interesting or considered nostalgic by you or the community!<br><br>
+                                    to you the Community Knowledge - an archive of all the information from the forums that is either important, interesting or considered nostalgic by you or the community!<hr>
                                     <h5 id="header" class="card-title text-center text-brown font-weight-bold" style="text-align: left;">..:: Phase 1 - Data Collection ::..<br></h5>
                                     This project wouldn't be possible without your support! The community is spread across numerous countries and nearly 20 different languages.
-                                    You, coming from your own community, are the one who knows best what the interesting content in your forums is!<br><br>
+                                    As you are coming from your own community, you know the best what the interesting content in your forums is!<br><br>
                                     <p style="font-weight: bold">Are you aware of any interesting and popular topics in your forum? Do you find particular content important to future players? Is there a specific section or area on your forum that you keep returning to? 
                                     Or do you simply want to have some content stored because it holds your memories and you feel nostalgic about it?</p>
-                                    This is your moment! The forums will be closed at the end of this year, and I've prepared an automatic script that will scrape the most popular topics and save their content here on my website!
+                                    This is your moment! The forums will be closed at the end of this year, and I've prepared an automatic way to gather data from the most popular topics to be saved here on my website!
                                     You will always be able to return to your favorite content even after the forums are permanently closed!<br><br>
-                                    <p style="font-weight: bold;">Take a look at the current content of this archive to see how similar the content to the original forums is and how will the final version look like!</p>
+                                    <p style="font-weight: bold;">Take a look at the current sample of the Community Knowledge to get an idea of what the final version will look like! The sample version currently only includes a few topics.</p>
                                     <h5 id="header" class="card-title text-center text-brown font-weight-bold" style="text-align: left;">..:: How can I help? ::..<br></h5>
-                                    It's simple! All you have to do is visit your forum (no matter what nationality you are - all languages are welcomed!) and send me all the topics you would like to have stored. Simply use 
+                                    It's simple! All you have to do is visit your forum (no matter what nationality you are - all languages are welcomed!) and send me some of the topics you would like to have stored. Simply use 
                                     the form below to send me as many links to your favorite topics as you wish - whether it's 3, 5, 10, 20 or more! You can even send the links to the entire sections if you feel like they are worth it!
-                                    <p style="text-align: center;"><h4 style="text-align: center;">Visit the form <a href="https://docs.google.com/forms/d/1LVn9ZoyqCJBkgB6W4GToM9u0V9NZTomKIcKCg3Bvknc" target="_blank" class="text-link">here</a>!</h4></p>
-                                    I will end the Phase 1 on December 12th, 2023. I will then take my time to process all the content you - as a community - have sent me and will scrape the forums to store their content here on my website! You can already
-                                    start sharing the topics with me, to make sure you reserve enough time for this process! Once the forums are closed, no more content can be archived!<br><hr>
+                                    <p style="text-align: center;"><h4 style="text-align: center;">Visit the form <a href="https://docs.google.com/forms/d/1ECxKwNiiGIFWHwFyANIk6BvSsPGOQ-f2WbrMjhPdDnI" target="_blank" class="text-link">here</a>!</h4></p>
+                                    The Phase 1 will be ended on December 12th, 2023. I will then take my time to process all the content you - as a community - have sent me and will scrape the forums to store their content here on my website! You can already
+                                    start sharing the topics with me, to make sure you reserve enough time for this process! Once the forums are closed, no more content can be archived! ⏳<br><hr>
                                     <h5 id="header" class="card-title text-center text-brown font-weight-bold" style="text-align: left;">..:: What are the limitations? ::..<br></h5>
                                     You may be wondering - how much content can my website store? Well, I obviously can't store the entire forums. However, I've reserved ample capacity for this project, 
-                                    so you don't have to worry too much about space. Still, it's not possible to save every single topic, therefore it's important to prioritize the content you share with me.<br><br>
-                                    <h5 id="header" class="card-title text-center text-brown font-weight-bold" style="text-align: left;">..:: Why is this archive read-only? ::..<br></h5>
-                                    Another thing you may be asking - why did I not create the fully functional forum that you can respond to and create new topics and posts?<br><br>
-                                    The official mean of communication is now being shifted from Forums to Discord. Even though my technical ability and infrastructure would allow me to create a fully functional forum,
-                                    I do not aim to position myself between Innogames and 
+                                    so you don't have to worry too much about space. Still, it's not possible to save every single topic, so it's important to prioritize the content you share with me.<br><br>
+                                    <h5 id="header" class="card-title text-center text-brown font-weight-bold" style="text-align: left;">..:: Why is the Community Knowledge read-only? ::..<br></h5>
+                                    If you're wondering why I haven't created a fully functional forum for you to respond to and interact with, you're absolutely right. The technical capabilities of my website, with a few adjustments, 
+                                    could easily support the creation of a fully functional forum, serving as a replacement for the forums many of you were accustomed to. However, following InnoGames' decision, the official means of communication 
+                                    are now shifting to Discord. This will be the primary platform for all future official communications, including contests, feedback, and much more.<br><br>
+                                    The increasing popularity of my website over the past months, combined with the introduction of a new forum, could potentially create a significant barrier between InnoGames and their goals of establishing 
+                                    an official social media platform. As a content creator, I want to avoid interfering with their official plans and avoid competing with them. I have immense respect for the players who cherished our 
+                                    official forums, and I've chosen to take a more delicate approach by providing a repository of memories for something that we won't be able to replicate in the future.<br><br>
+                                    This decision aims to align with InnoGames' vision and ensure that players have a seamless and unified experience on Discord, which has been chosen as the official communication platform going forward.<br><br>
+                                    <hr>
+                                    I eagerly anticipate your responses and am thrilled to embark on an exciting new project for my website with all of you!
                                 </div>
                             </div>
                             </div>
